# SMEW

./: .gitignore  Bottles_tePas.ipynb  CITATION.cff  Example.ipynb  Mesocosm_Amann.ipynb  Mesocosm_Kelland.ipynb  README.md  Vials_Dietzen.ipynb  biogeochem.py  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: Mesocosm_Amann-checkpoint.ipynb  Mesocosm_Kelland-checkpoint.ipynb
pyEW/: biogeochem.py  constants.py  ic.py  moisture.py  organic_carbon.py  weathering.py
smew/: __init__.py  biogeochem.py  biogeochem2psd.py  biogeochem_fast.pyx  complementary.py  constants.py  hydroclimatic.py  ic.py  moisture.py  organic_carbon.py  vegetation.py  weathering.py
